- Fq and FilterQuery with AND and OR